# ccc-proj

./: AI.cpp  AI.h  CMakeLists.txt  Game.cpp  Game.h  INDEX.md  Makefile  PROJECT_GUIDE.md  Player.h  QUICK_START.md  README.md  index.html  main.cpp  script.js  server.js  style.css
